# aiohomekit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.md  README.md  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
aiohomekit/: __init__.py  __main__.py  cdb.py  characteristic_cache.py  const.py  debounce.py  enum.py  exceptions.py  hkjson.py  meshcop.py  pdu.py  testing.py  tlv8.py  utils.py  uuid.py  zeroconf.py
aiohomekit/controller/: __init__.py  abstract.py  controller.py  discovery.py  pairing.py  tools.py
aiohomekit/controller/ble/: __init__.py  bleak.py  client.py  connection.py  const.py  controller.py  discovery.py  key.py  manufacturer_data.py  pairing.py  pdu.py  structs.py  values.py
aiohomekit/controller/coap/: __init__.py  connection.py  controller.py  discovery.py  pairing.py  pdu.py  structs.py
aiohomekit/controller/ip/: __init__.py  connection.py  controller.py  discovery.py  pairing.py  zeroconf.py
aiohomekit/crypto/: __init__.py  chacha20poly1305.py  hkdf.py  srp.py
aiohomekit/http/: __init__.py  response.py
aiohomekit/model/: __init__.py  categories.py  entity_map.py  feature_flags.py  mixin.py  status_flags.py
aiohomekit/model/characteristics/: __init__.py  abstract_characteristic.py  characteristic.py  characteristic_formats.py  characteristic_permissions.py  characteristic_types.py  characteristic_units.py  const.py  data.py  permissions.py  structs.py  types.py  units.py
aiohomekit/model/services/: __init__.py  abstract_service.py  data.py  service.py  service_types.py  types.py
aiohomekit/protocol/: __init__.py  opcodes.py  statuscodes.py  tlv.py
aiohomekit/zerocnf/: __init__.py
aiohomekit/zeroconf/: __init__.py
homekit/: __main__.py  exceptions.py
homekit/controller/: __init__.py  pairing.py
homekit/controller/ip/: discovery.py  zeroconf.py
homekit/crypto/: srp.py
homekit/http/: content_types.py  response.py
homekit/model/: __init__.py  feature_flags.py  mixin.py
homekit/model/characteristics/: abstract_characteristic.py
homekit/model/services/: abstract_service.py  service_types.py
homekit/protocol/: opcodes.py
scripts/: generate_metadata.py  release.sh  test.sh
tests/: accessoryserver.py  bleCharacteristicUnits_test.py  chacha20poly1305_test.py  characteristicTypes_test.py  characteristicsTypes_test.py  conftest.py  feature_flags_test.py  helpers.py  httpStatusCodes_test.py  http_response_test.py  serverdata_test.py  serviceTypes_test.py  srp_test.py  test_coap_structs.py  test_controller.py  test_controller_ble.py  test_controller_ble_manufacturer_data.py  test_controller_coap.py  test_controller_coap_pdu.py  test_controller_coap_structs.py  test_controller_ip_controller.py  test_controller_ip_pairing.py  test_crypto_chacha20poly1305.py  test_crypto_hkdf.py  test_crypto_srp.py  test_enum.py  test_hkjson.py  test_http.py  test_http_response.py  test_ip_connection.py  test_ip_discovery.py  test_ip_pairing.py  test_main.py  test_meshcop.py  test_model.py  test_model_characteristics_characteristic_types.py  test_model_characteristics_characteristic_units.py  test_model_feature_flags.py  test_model_services.py  test_pdu.py  (+8 more)
tests/aio/: conftest.py  test_controller.py  test_ip_discovery.py  test_ip_pairing.py  test_main.py
tests/fixtures/: camera.json  eve_energy.json  home_assistant_bridge_camera.json  hue_bridge.json  idevices_switch.json  nanoleaf_bulb.json  synthetic_float_minstep.json
