[tool.poetry]
name = "aiohomekit"
version = "0.6.8"
description = "An asyncio HomeKit client"
authors = ["John Carr <john.carr@unrouted.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Jc2k/aiohomekit"
repository = "https://github.com/Jc2k/aiohomekit"
keywords = ["HomeKit", "home", "automation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Home Automation",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = ">=2.9.2"
zeroconf = ">=0.32.0"
commentjson = "^0.9.0"

[tool.poetry.dev-dependencies]
isort = "^5.4.2"
mypy = "^0.761"
black = "^21.12b0"
flake8 = "^3.7.9"
pytest = "^5.3.5"
coverage = "^5.0.4"
codecov = "^2.1.9"
pylint = "^2.4.4"
pytest-aiohttp = "^0.3.0"
pyupgrade = "^2.7.2"
pytest-cov = "^2.10.1"
asynctest = "^0.13.0"
aiohttp = "^3.8.1"

[tool.black]
target-version = ["py37", "py38"]

[tool.poetry.scripts]
aiohomekitctl = "aiohomekit.__main__:sync_main"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = "true"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "aiohomekit,tests"
forced_separate = "tests"
combine_as_imports = "true"
extra_standard_library = "_socket"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
