[tool.poetry]
name = "aiohomekit"
version = "2.6.11"
description = "An asyncio HomeKit client"
authors = ["John Carr <john.carr@unrouted.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Jc2k/aiohomekit"
repository = "https://github.com/Jc2k/aiohomekit"
keywords = ["HomeKit", "home", "automation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Home Automation",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
include = ["aiohomekit/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = ">=2.9.2"
zeroconf = ">=0.54.0"
commentjson = "^0.9.0"
aiocoap = ">=0.4.5"
bleak = ">=0.19.0"
chacha20poly1305-reuseable = ">=0.0.4"
bleak-retry-connector = ">=2.9.0"
orjson = ">=3.7.8"
async-timeout = "^4.0.2"
chacha20poly1305 = "^0.0.3"
async-interrupt = ">=1.1.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
coverage = "^6.3"
pylint = "^2.12.2"
pytest-aiohttp = "^1.0.3"
pyupgrade = "^2.31.0"
pytest-cov = "^3.0.0"
asynctest = "^0.13.0"
aiohttp = ">=3.8.3"

[tool.black]
target-version = ["py39", "py310"]

[tool.poetry.scripts]
aiohomekitctl = "aiohomekit.__main__:sync_main"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = "true"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "aiohomekit,tests"
forced_separate = "tests"
combine_as_imports = "true"
extra_standard_library = "_socket"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
